--- a/index.html
+++ b/index.html
@@ -25,8 +25,48 @@
                         <u><a href="www.instagram.com">Learn more</a></u>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="box-part text-center">
+                        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                        <h4>Twitter</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum alias </p>
+                        <u><a href="www.twitter.com">Learn more</a></u>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box-part text-center">
+                        <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                        <h4>Facebook</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum alias </p>
+                        <u><a href="www.facebook.com">Learn more</a></u>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box-part text-center">
+                        <i class="fa fa-pinterest-p fa-2x" aria-hidden="true"></i>
+                        <h4>Pinterest</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum alias </p>
+                        <u><a href="www.facebook.com">Learn more</a></u>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box-part text-center">
+                        <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+                        <h4>Google</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum alias </p>
+                        <u><a href="www.google.com">Learn more</a></u>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box-part text-center">
+                        <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                        <h4>Github</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum alias </p>
+                        <u><a href="www.github.com">Learn more</a></u>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 </body>
-
 </html>
